# dwdweather-skill

./: .gitignore  README.md
dwdweather/: SKILL.md
dwdweather/scripts/: README.md  __init__.py  api.py  cache.py  cli.py  config.py  errors.py  geocode.py  pyproject.toml  render.py  toon.py  weather.py
dwdweather/scripts/commands/: __init__.py  alerts.py  common.py  current.py  forecast.py  history.py  stations.py  summary.py
