[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dwdweather"
version = "1.0.0"
description = "Command-line weather tool powered by BrightSky API using DWD weather data"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "platformdirs>=4.0",
    "rich>=13.0",
    "typer>=0.12",
]

[project.scripts]
dwdweather = "dwdweather.cli:app"

[tool.setuptools]
packages = ["dwdweather", "dwdweather.commands"]

[tool.setuptools.package-dir]
dwdweather = "."
"dwdweather.commands" = "commands"
